--- a/HTML/practica1.html
+++ b/HTML/practica1.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practica 1 - Alberto Hernandez</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-
+        awesome/6.5.0/css/all.min.css">
+        <link rel="stylesheet" href="../practica/CSS/fondos.css">
 </head>
 <body>
     <div class="hero-image">
@@ -76,18 +79,23 @@
 
             </section>
 
-            <div class="modal" id="id">
+            <div class="modal" id="videoModal">
+                <div class="modal-content">
+                    <video id="spyXfamilyVideo" width="100%" controls>
+                        <source src="../resources/SpyXFamily.mp4" type="video/mp4">Tu navegador no soporta la reproducción de video.
+                    </video>
+                </div>
 
             </div>
 
         </section>
-
-        <footer class="footer">
+    </div>
+    <footer class="footer">
                 <section class="social-icons">
-                    <a href="https://www.facebook.com/NetflixLatino/?locale=es_LA" target="_blank" aria-label="">Facebook<i class="fab fa-facebook-f"></i></a>
-                    <a href="https://www.instagram.com/netflixlat/?hl=es-la" target="_blank" aria-label="">Instagram<i class="fab fa-instagram"></i></a>
-                    <a href="https://x.com/NetflixLAT?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_blank" aria-label="">X<i class="fab fa-twitter"></i></a>
-                    <a href="https://www.youtube.com/channel/UCWOA1ZGywLbqmigxE4Qlvuw" target="_blank" aria-label="">Youtube<i class="fab fa-youtube"></i></a>
+                    <a href="https://www.facebook.com/NetflixLatino/?locale=es_LA" target="_blank" aria-label="Red social de Facebook"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://www.instagram.com/netflixlat/?hl=es-la" target="_blank" aria-label="Red social de Instagram"><i class="fab fa-instagram"></i></a>
+                    <a href="https://x.com/NetflixLAT?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_blank" aria-label="Red social de Twitter"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.youtube.com/channel/UCWOA1ZGywLbqmigxE4Qlvuw" target="_blank" aria-label="Red social de Youtube"><i class="fab fa-youtube"></i></a>
                 </section>
                 <section class="footer-links">
                     <ul id="primera-lista">
@@ -139,8 +147,10 @@
                     </ul>
                 </section>
                 <p class="copyright">© 1997–2025 Netflix, Inc.</p>
-            </footer>
-    </div>
+    </footer>
+
+    <script src="https://kit.fontawesome.com/8ceb30feb6.js"
+                crossorigin="anonymous"></script>
     
 </body>
 </html>
