Complemento CSS - Dia 2
Termino de la clase 2 del curso

--- a/CSS/fondos.html
+++ b/CSS/fondos.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="../practica/CSS/fondos.css">
 </head>
 <body>
-    <!--<div class="contenedor"></div>-->
+    <header class="header" id="header">
+        
+    </header>
+    <div class="gradiente">
+
+
+    </div>
 </body>
 </html>
