--- a/CSS/posicionamiento.html
+++ b/CSS/posicionamiento.html
@@ -8,9 +8,13 @@
 </head>
 <body>
     <div class="caja">1</div>
-    <div class="relativa">2</div>
-    <div class="caja">3</div>
-    <div class="caja">4</div>
+    <div class="caja relativa">2</div>
+    <div class="caja absoluta">3</div>
+    <div class="caja padre">
+        <div class="caja hija">
+
+        </div>
+    </div>
     <div class="caja">5</div>
 </body>
 </html>
