--- a/practica/practica2.html
+++ b/practica/practica2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Práctica 2 - Alberto Hernandez</title>
+    <title>Práctica 3 - Alberto Hernandez</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-
         awesome/6.5.0/css/all.min.css">
         <link rel="stylesheet" href="../practica/CSS/estilos.css">
@@ -150,9 +150,11 @@
                         </li>
                     </ul>
                 </section>
+                
+                <button class="service-code">Código de servicio</button>
                 <p class="copyright">© 1997–2025 Netflix, Inc.</p>
     </footer>
-
+    <script src="javascript/modal.js"></script>
     <script src="https://kit.fontawesome.com/8ceb30feb6.js"
                 crossorigin="anonymous"></script>
     
